# Co.Ba.L.T

./: .gitignore  CBLT_Console.cpp  CBLT_Console.hpp  CBLT_Controller.cpp  CBLT_Controller.hpp  CBLT_Cursor.cpp  CBLT_Cursor.hpp  CBLT_Directive.cpp  CBLT_Directive.hpp  CBLT_File.cpp  CBLT_File.hpp  CBLT_Font.cpp  CBLT_Font.hpp  CBLT_Interpolator.cpp  CBLT_Interpolator.hpp  CBLT_Keyboard.cpp  CBLT_Keyboard.hpp  CBLT_TopBar.cpp  CBLT_TopBar.hpp  CBLT_Util.cpp  CBLT_Util.hpp  CBLT_Win.cpp  CBLT_Win.hpp  Cargo.toml  CoBaLT.cpp  LICENCE.md  Makefile  README.md  includes.hpp  main.code-workspace  test.c
.tests/: new  new.c  test.c
_tests/: 5k_lines.c
misc/: README.md
options/: options.cobalt.conf  palletes.cobalt.conf
scripts/: file.sh  tr.sh  tree.sh
src/: CoBaLT.cpp  editor_camera.rs  editor_console.rs  editor_console_cursor.rs  editor_cursor.rs  editor_directives.rs  editor_file.rs  editor_options.rs  editor_pallete.rs  editor_text.rs  main.rs
src/audio/: editor_audio.rs  mod.rs
src/camera/: editor_camera.rs
src/console/: editor_console.rs  editor_console_cursor.rs  editor_directives.rs  editor_file.rs  editor_file_system.rs  editor_terminal.rs  mod.rs
src/options/: editor_options.rs  editor_pallete.rs  mod.rs
src/text/: editor_autocomplete.rs  editor_clipboard.rs  editor_cursor.rs  editor_input.rs  editor_language_manager.rs  editor_text.rs  editor_text_stylizer.rs  editor_token.rs  mod.rs
src/win/: editor_win_config.rs
tests/: 10k_lines.c  test.c  whitespace
