[package]
name = "CoBaLT"
version = "1.5.4"
edition = "2024"

[dependencies]
macroquad = { git = "https://github.com/GpapPeaky/Muse-macroquad", branch = "muse_kill_vsync" }
kira = { version = "0.11.0" }
miniquad = "0.4.8"
once_cell = "1.21.3"
regex = "1.12.2"
rfd = "0.16.0"
which = "8.0.0"
bevy_kira_audio = "0.24.0"
rand = "0.9.2"
chrono = "0.4.42"
